--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,4 @@ social:
 google_analytics: "UA-58263416-1"
 
 disqus:
-    shortname: my-disqus-shortname
+    shortname: https-irvandandung-github-com
