--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: Dandoeng
+description: Dandoeng Personal Website Form Jekyll & theme by brianmaierjr (built with SASS / COMPASS / SUSY)
 
 url: https://irvandandung.github.io/
 baseurl: ""
