--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Dandoeng
+title: DANDOENG :)
 description: Dandoeng Personal Website Form Jekyll & theme by brianmaierjr (built with SASS / COMPASS / SUSY)
 
 url: https://irvandandung.github.io/
