--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: DANDOENG  :)
 description: Dandoeng Personal Website Form Jekyll & theme by brianmaierjr (built with SASS / COMPASS / SUSY)
 
-url: https://irvandandung.github.io/
+url: https://dandoeng.tech/
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
