--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,10 @@ navigation:
     url: /about
   - title: Contact
     url: /contact
+  - title: Projects
+    url: /projects
+  - title: Articles
+    url: /articles
   - title: Certificates
     url: /certificates
 
